best buy is stable watch for popup

--- a/data/user/config.json
+++ b/data/user/config.json
@@ -5,5 +5,6 @@
       "target_url": "https://www.bestbuy.com/site/searchpage.jsp?st=flash+drives&_dyncharset=UTF-8&_dynSessConf=&id=pcat17071&type=page&sc=Global&cp=1&nrp=&sp=&qp=&list=n&af=true&iht=y&usc=All+Categories&ks=960&keys=keys"
     }
   ],
-  "logged_in": "BestBuy"
+  "logged_in": "BestBuy",
+  "debug_mode": true
 }
