--- a/data/user/config.json
+++ b/data/user/config.json
@@ -1,10 +1,19 @@
 {
   "items": [
     {
+      "store": "Newegg",
+      "target_url": "https://www.newegg.com/p/pl?d=5090&N=601469156%20100007709&RandomID=36164758211318220250129124155"
+    }
+    ,
+    {
       "store": "BestBuy",
-      "target_url": "https://www.bestbuy.com/site/searchpage.jsp?st=flash+drives&_dyncharset=UTF-8&_dynSessConf=&id=pcat17071&type=page&sc=Global&cp=1&nrp=&sp=&qp=&list=n&af=true&iht=y&usc=All+Categories&ks=960&keys=keys"
+      "target_url": "https://www.bestbuy.com/site/searchpage.jsp?id=pcat17071&qp=category_facet%3DGPUs%20%2F%20Video%20Graphics%20Cards~abcat0507002%5Egpusv_facet%3DGraphics%20Processing%20Unit%20(GPU)~Nvidia%20GeForce%20RTX%205090&st=5090+gpu"
     }
   ],
-  "logged_in": "BestBuy",
-  "debug_mode": true
+  "logged_in": [
+    "BestBuy",
+    "Newegg",
+    "Amazon"
+  ],
+  "debug_mode": false
 }
